[package]
authors = ["hrishikesh <hrishi98.m@gmail.com>"]
edition = "2021"
license = "MIT"
name = "test"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
bytes = "1.4"
pbjson-types = "0.7.0"  

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
glob = "*"