[package]
name = "injective-consumer-redis"
version = "0.1.0"
edition = "2021"
description = "Redis consumer for Injective Protocol data"
license = "MIT"
repository = "https://github.com/enigmarikki/injective-consumer-redis"

[dependencies]
injective-consumer = "*"  # Replace with actual version or git reference
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
futures = "0.3"

[[bin]]
name = "injective-redis-consumer"
path = "src/main.rs"