[package]
name = "injective-consumer-scylla"
version = "0.1.0"
edition = "2021"
description = "ScyllaDB consumer for Injective Protocol data"
license = "MIT"
repository = "https://github.com/your-username/injective-consumer-scylla"

[dependencies]
injective-consumer-base = "0.1.0"  # Replace with actual version or git reference
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
scylla = { version = "0.10" }
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
futures = "0.3"

[[bin]]
name = "injective-consumer-scylla"
path = "src/main.rs"