[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
bytes = "1.4"
pbjson-types = "0.7.0"  
uuid = "*"
tracing = "*"
tracing-subscriber = "*"
serde_json = "*"