[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12.3", features = ["transport", "prost"] }
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
bytes = "1.4"
pbjson-types = "0.7.0"  
uuid = "1.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.114"
lapin = "2.3.1"
redis = { version = "0.29.1", features = ["aio", "async-std-comp"] }
async-trait = "0.1.87"
rdkafka = "0.37.0"
serde = "1.0.197"
chrono = "*"
log = "*"
futures = "*"
env_logger = "*"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.3"