[package]
name = "injective-consumer"
version = "0.1.0"
edition = "2021"
description = "Base library for Injective data consumers"
license = "MIT"
repository = "https://github.com/enigmarikki/injective-consumer"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["ssl", "sasl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.6"
futures = "0.3"
redis = { version = "0.29.1", features = ["tokio-comp"] }
scylla = "0.15.1"
chrono = "0.4"
async-trait = "0.1"
tonic = "0.12.3"
prost = "0.13.5"
